# ddddocr_rust_dll

./: Cargo.toml  README.md
src/: lib.rs
