[package]
name = "ddddocr_rust_dll"
version = "0.1.3"
edition = "2021"
[lib]
crate-type = ["cdylib"]
name = "ddddocr"
[dependencies]
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }
bson = "2.11.0"
serde_json = "1.0.117"
lazy_static = "1.4.0"
tungstenite = "0.23.0"
tokio = "1.38.0"
image = "0.24.9"
encoding = "0.2"